fixed overlapping of text issue

--- a/MoviesApp/src/app/components/navbar/navbar.component.scss
+++ b/MoviesApp/src/app/components/navbar/navbar.component.scss
@@ -5,10 +5,13 @@ nav {
     height: 100vh;
     width: 18vw;
     border-right: 1.5px solid rgba(221, 221, 221, 0.11);
+    position: sticky;
+    top: 0;
 
     img {
         width: 135px;
         padding: 19%;
+        padding-top: 25%;
     }
 
     .category {
