--- a/MoviesApp/src/app/user/actual-home/actual-home.component.scss
+++ b/MoviesApp/src/app/user/actual-home/actual-home.component.scss
@@ -1,6 +1,6 @@
 .home-main {
     .top-five {
-        width: 63%;
+        width: 100%;
         height: 47vh;
         border-radius: 15px;
         overflow: hidden;
@@ -10,13 +10,14 @@
             width: 100%;
             height: 100%;
             border-radius: 15px;
+            position: relative;
             
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 border-radius: 15px;
-                opacity: 0.7;
+                opacity: 0.6;
                 animation: zoom 5s linear infinite;
             }
 
@@ -32,34 +33,34 @@
                     text-transform: uppercase;
                 }
             }
+        }
 
-            .slide {
-                position: absolute;
-                top: 50%;
-                height: 40px;
-                width: 40px;
-                border-radius: 100px;
-                background-color: rgba(255, 255, 255, .15);  
-                backdrop-filter: blur(5px);
-                transform: translateY(-50%);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                cursor: pointer;
+        .slide {
+            position: absolute;
+            top: 50%;
+            height: 40px;
+            width: 40px;
+            border-radius: 100px;
+            background-color: rgba(255, 255, 255, .15);  
+            backdrop-filter: blur(5px);
+            transform: translateY(-50%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
 
-                fa-icon {
-                    font-size: 18px;
-                    color: white;
-                }
+            fa-icon {
+                font-size: 18px;
+                color: white;
             }
+        }
 
-            .left-arrow {
-                left: 5%
-            }
+        .left-arrow {
+            left: 5%
+        }
 
-            .right-arrow {
-                right: 5%;
-            }
+        .right-arrow {
+            right: 5%;
         }
     }
 }
