--- a/MoviesApp/src/app/user/home/home.component.scss
+++ b/MoviesApp/src/app/user/home/home.component.scss
@@ -9,7 +9,8 @@
 
     .main-content {
         color: white;
-        width: 100%;
-        padding: 4% 5% 0 5%;
+        width: 52vw;
+        padding: 4% 6% 0 6%;
+        border-right: 1.5px solid rgba(221, 221, 221, 0.11);
     }
 }
